fixed image overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -364,6 +364,10 @@ footer h5 {
     padding: 25px 10%;
   }
 
+  .feature-card img {
+    width: 318px;
+  }
+
   .testimonial {
     flex-direction: column;
     gap: 50px;
